Fixed profile container on mobile

--- a/style.css
+++ b/style.css
@@ -96,17 +96,16 @@ a{
 
 .profile_box{
 	display: grid;
-	height: 250px;
-	width: 300px;
 	align-items: center;
 	justify-items: center;
 	grid-template-columns: 100fr;
-	grid-template-rows: 60fr 20fr 20fr;
+	grid-template-rows: 150px 50px 50px;
 	grid-template-areas: "figure"
 						 "caption"
 						 "links";
 }
 .profile_box img{
+	grid-area: figure;
 	display: grid;
 	object-fit: contain;
 	height: 95%;
@@ -114,10 +113,12 @@ a{
 	border: 3px solid white;
 }
 .profile_box p{
+	grid-area: caption;
 	color: white;
 	text-shadow: 2px 2px black;
 }
 .profile_box nav{
+	grid-area: links;
 	display: flex;
 }
 .profile_box a{
